apps/next/src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .content-container {
    @apply container mx-auto max-w-4xl px-4;
  }

  .customScrollBar::-webkit-scrollbar {
    @apply w-0.5 bg-transparent;
  }

  .customScrollBarBig::-webkit-scrollbar {
    @apply w-2 bg-transparent;
  }

  .customScrollBar::-webkit-scrollbar-thumb {
    @apply bg-neutral-200 dark:bg-neutral-900;
  }
}

body {
  scrollbar-gutter: stable;
  overflow-y: scroll;
}

/* Removes arrows from input number */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type="number"] {
  -moz-appearance: textfield;
}

/* Emoji picker styling */
em-emoji-picker {
  --background-rgb: 23, 23, 23;
  --border-radius: 0;
  --category-icon-size: 24px;

  --color-border-over: #737373;
  --color-border: rgb(64, 64, 64);

  --em-rgb-input: #262626;

  --font-size: 20px;
  --rgb-accent: 132, 204, 22;
  --rgb-background: 23, 23, 23;
  --rgb-color: 250, 250, 250;
  --rgb-input: 64, 64, 64;

  height: 50vh;
  min-height: 400px;
  max-height: 800px;
}

